[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "django-btcpay-donation"
version = "0.0.2"
authors = [
  { name="Tim The Webmaster", email="timachuduk@gmail.com" },
]
description = "This package allows you to easily track and manage generated links on the BTCPay Server for further use via invoices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Software Development :: Pre-processors",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "Django>=5.2",
]
keywords = ["django", "django app", "donation", "btcpay", "server", "timthewebmaster"]
[project.urls]
"Complete guide RU" = "https://timthewebmaster.com/ru/tools/django-btcpay-donation/"
"Complete guide EN" = "https://timthewebmaster.com/en/tools/django-btcpay-donation/"
"Repository" = "https://github.com/DmRafaule/django-btcpay-donation"